--- a/PinBoard/templates/index.html.twig
+++ b/PinBoard/templates/index.html.twig
@@ -1,6 +1,6 @@
-{% block css %}
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
-{% endblock %}
+{#{% block css %}#}
+    {#<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />#}
+{#{% endblock %}#}
 
 <h1>Home page</h1>
 
@@ -19,8 +19,7 @@
     {% endfor %}
 </select>
 
-
-{% block javascripts %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
-{% endblock %}
+{#{% block javascripts %}#}
+    {#<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>#}
+    {#<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>#}
+{#{% endblock %}#}
