--- a/PinBoard/templates/index.html.twig
+++ b/PinBoard/templates/index.html.twig
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- ... -->
     <link rel="stylesheet" href="{{ asset('build/app.css') }}">
 </head>
 <h1>Home page</h1>
 <body>
-<br>
-    <div class="search-bar">
-        <select class="js-example-basic-single" multiple="multiple">
-            {% for category in categories %}
-                <option value="{{ category.name }}">{{  category.name }}</option>
-            {% endfor %}
+
+{{ form_start(form) }}
+<div class="search-bar-start">
+    <div class="select2" id="start">
+    <select>
+        {{ form_row(form.name) }}
+    </select>
+    </div>
+</div>
+<div class="search-bar-city">
+    <div class="select2" id="city">
+        <select>
+            {{ form_row(form.city) }}
         </select>
     </div>
+</div>
+<div class="button-search">
+    {{ form_row(form.search, { 'label': 'Search' }) }}
+</div>
+{{ form_end(form) }}
+
+
 <script src="{{ asset('build/app.js') }}"></script>
 </body>
 </html>
