--- a/PinBoard/templates/index.html.twig
+++ b/PinBoard/templates/index.html.twig
@@ -20,13 +20,19 @@
     <div class="select2" id="city">
         <select>
             {{ form_row(form.city) }}
+            {% include 'maps.html.twig' %}
         </select>
     </div>
 </div>
 <div class="button-search">
     {{ form_row(form.search, { 'label': 'Search' }) }}
 </div>
+
 {{ form_end(form) }}
+
+<div class="button-search">
+    {{ form_row(form.search, { 'label': 'Search' }) }}
+</div>
 
 
 <script src="{{ asset('build/app.js') }}"></script>
