--- a/PinBoard/templates/maps.html.twig
+++ b/PinBoard/templates/maps.html.twig
@@ -46,13 +46,6 @@
 </div>
 
 <script>
-    // This example displays an address form, using the autocomplete feature
-    // of the Google Places API to help users fill in the information.
-
-    // This example requires the Places library. Include the libraries=places
-    // parameter when you first load the API. For example:
-    // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
-
     var placeSearch, autocomplete;
     var componentForm = {
         street_number: 'short_name',
@@ -63,36 +56,20 @@
         postal_code: 'short_name'
     };
 
+
     function initAutocomplete() {
-        // Create the autocomplete object, restricting the search to geographical
-        // location types.
         autocomplete = new google.maps.places.Autocomplete(
             /** @type {!HTMLInputElement} */(document.getElementById('autocomplete')),
             {types: ['geocode']});
 
         // When the user selects an address from the dropdown, populate the address
         // fields in the form.
-        autocomplete.addListener('place_changed', fillInAddress);
+        autocomplete.addListener('place_changed', changeValue());
     }
 
-    function fillInAddress() {
-        // Get the place details from the autocomplete object.
-        var place = autocomplete.getPlace();
-
-        for (var component in componentForm) {
-            document.getElementById(component).value = '';
-            document.getElementById(component).disabled = false;
-        }
-
-        // Get each component of the address from the place details
-        // and fill the corresponding field on the form.
-        for (var i = 0; i < place.address_components.length; i++) {
-            var addressType = place.address_components[i].types[0];
-            if (componentForm[addressType]) {
-                var val = place.address_components[i][componentForm[addressType]];
-                document.getElementById(addressType).value = val;
-            }
-        }
+    function changeValue() {
+//        $('#autocomplete').val();
+        return true;
     }
 
     // Bias the autocomplete object to the user's geographical location,
@@ -113,5 +90,5 @@
         }
     }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjZJYc-v79_MNVQDKhBpECQZwBIY8pChA&libraries=places&callback=initAutocomplete"
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjZJYc-v79_MNVQDKhBpECQZwBIY8pChA&libraries=places&callback=initAutocomplete&language=fr"
         async defer></script>
