Grabbing address details

--- a/PinBoard/templates/index.html.twig
+++ b/PinBoard/templates/index.html.twig
@@ -15,15 +15,42 @@
         {{ form_row(form.name) }}
     </select>
         w
-    <select>
+    <select class="hidden">
         {% include 'maps.html.twig' %}
     </select>
     </div>
+    <table id="address">
+        <tr>
+            <td class="label">Street address</td>
+            <td class="slimField"><input class="field" id="street_number"
+                                         disabled="true"></input></td>
+            <td class="wideField" colspan="2"><input class="field" id="route"
+                                                     disabled="true"></input></td>
+        </tr>
+        <tr>
+            <td class="label">City</td>
+            <td class="wideField" colspan="3"><input class="field" id="locality"
+                                                     disabled="true"></input></td>
+        </tr>
+        <tr>
+            <td class="label">State</td>
+            <td class="slimField"><input class="field"
+                                         id="administrative_area_level_1" disabled="true"></input></td>
+            <td class="label">Zip code</td>
+            <td class="wideField"><input class="field" id="postal_code"
+                                         disabled="true"></input></td>
+        </tr>
+        <tr>
+            <td class="label">Country</td>
+            <td class="wideField" colspan="3"><input class="field"
+                                                     id="country" disabled="true"></input></td>
+        </tr>
+    </table>
 </div>
 <select class="hidden" id="type" name="type">
     <option value="1"></option>
 </select>
-<select class="hidden" name="city"></select>
+<select class="hidden" id="address" name="address"></select>
 <div class="button-search">
     {{ form_row(form.search, { 'label': 'Search' }) }}
 </div>
