--- a/PinBoard/assets/css/app.scss
+++ b/PinBoard/assets/css/app.scss
@@ -36,14 +36,10 @@ h1 {
   justify-content: center;
 }
 
-#city {
+#city, .hidden {
   display: none;
 }
 
 #city.visible {
   display: flex;
-}
-
-.hidden {
-  display: none;
 }
