--- a/PinBoard/templates/index.html.twig
+++ b/PinBoard/templates/index.html.twig
@@ -19,7 +19,7 @@
         {% include 'maps.html.twig' %}
     </select>
     </div>
-    <table id="address">
+    <table style="display:none;" id="address">
         <tr>
             <td class="label">Street address</td>
             <td class="slimField"><input class="field" id="street_number"
@@ -50,7 +50,13 @@
 <select class="hidden" id="type" name="type">
     <option value="1"></option>
 </select>
-<select class="hidden" id="address" name="address"></select>
+<select class="hidden" id="address" name="address">
+    <input id="locality" name="locality" value="none">
+    <input name="country" value="none">
+    <input name="array" id="array" value="">
+    <input name="" value="">
+    <input name="" value="">
+</select>
 <div class="button-search">
     {{ form_row(form.search, { 'label': 'Search' }) }}
 </div>
