--- a/PinBoard/templates/maps.html.twig
+++ b/PinBoard/templates/maps.html.twig
@@ -60,40 +60,16 @@
     };
 
     function initAutocomplete() {
-        autocomplete = new google.maps.places.Autocomplete(
-            /** @type {!HTMLInputElement} */(document.getElementById('autocomplete')),
-            {types: ['geocode']});
+        autocomplete = new google.maps.places.Autocomplete(document.getElementById('autocomplete'), {
+            types: ['(regions)']
+        });
+
 
         autocomplete.addListener('place_changed', function () {
             var place = autocomplete.getPlace();
-
-            var componentForm = {
-                street_number: 'short_name',
-                route: 'long_name',
-                locality: 'long_name',
-                administrative_area_level_1: 'short_name',
-                country: 'long_name',
-                postal_code: 'short_name'
-            };
-            for (var component in componentForm) {
-                document.getElementById(component).value = '';
-                document.getElementById(component).disabled = false;
-            }
-
-            for (var i = 0; i < place.address_components.length; i++) {
-                var addressType = place.address_components[i].types[0];
-                if (componentForm[addressType]) {
-                    var val = place.address_components[i][componentForm[addressType]];
-                    document.getElementById(addressType).value = val;
-                    var a = new Array();
-                    a[addressType] = val;
-                    var string = a[addressType].toString();
-                    console.log(string);
-                    if (string != null) {
-                        document.getElementById(string).value = string;
-                    }
-                }
-            }
+            var adr_address = (place['adr_address']);
+            var split = adr_address.split(',');
+            var string = split.toString();
         });
     }
 
