--- a/PinBoard/templates/base.html.twig
+++ b/PinBoard/templates/base.html.twig
@@ -3,10 +3,31 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('build/app.css') }}">
+            <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+        {% endblock %}
     </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+
+    {% block body %}
+            {% block page %}<div class="page">
+            <div class="left">Left</div>
+            {% block content %}{% endblock content%}
+            <div class="right">Right</div>
+            </div>{% endblock page %}
+            {% block footer %}
+                <div class="footer">
+                    <div class="footer-header">
+                        <div>Footer</div>
+                    </div>
+                    <div class="footer-content"></div>
+                </div>
+            {% endblock footer %}
+    {% endblock body%}
+
+    {% block javascripts %}
+                <script src="{{ asset('build/app.js') }}"></script>
+        {% endblock %}
 </html>
+
