--- a/PinBoard/templates/base.html.twig
+++ b/PinBoard/templates/base.html.twig
@@ -27,7 +27,9 @@
     {% endblock body%}
 
     {% block javascripts %}
-                <script src="{{ asset('build/app.js') }}"></script>
-        {% endblock %}
+        <script src="{{ asset('build/app.js') }}"></script>
+        <script>
+        </script>
+    {% endblock %}
 </html>
 
