--- a/PinBoard/templates/maps.html.twig
+++ b/PinBoard/templates/maps.html.twig
@@ -1,48 +1,46 @@
  <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <style>
-        #locationField, #controls {
-            position: relative;
-            width: 480px;
-        }
-        #autocomplete {
-            position: absolute;
-            top: 0px;
-            left: 0px;
-            width: 99%;
-        }
-        .label {
-            text-align: right;
-            font-weight: bold;
-            width: 100px;
-            color: #303030;
-        }
-        #address {
-            border: 1px solid #000090;
-            background-color: #f0f0ff;
-            width: 480px;
-            padding-right: 2px;
-        }
-        #address td {
-            font-size: 10pt;
-        }
-        .field {
-            width: 99%;
-        }
-        .slimField {
-            width: 80px;
-        }
-        .wideField {
-            width: 200px;
-        }
-        #locationField {
-            height: 20px;
-            margin-bottom: 2px;
-        }
+        /*#locationField, #controls {*/
+            /*position: relative;*/
+            /*width: 480px;*/
+        /*}*/
+        /*#autocomplete {*/
+            /*position: absolute;*/
+            /*top: 0px;*/
+            /*left: 0px;*/
+            /*width: 99%;*/
+        /*}*/
+        /*.label {*/
+            /*text-align: right;*/
+            /*font-weight: bold;*/
+            /*width: 100px;*/
+            /*color: #303030;*/
+        /*}*/
+        /*#address {*/
+            /*border: 1px solid #000090;*/
+            /*background-color: #f0f0ff;*/
+            /*width: 480px;*/
+            /*padding-right: 2px;*/
+        /*}*/
+        /*#address td {*/
+            /*font-size: 10pt;*/
+        /*}*/
+        /*.field {*/
+            /*width: 99%;*/
+        /*}*/
+        /*.slimField {*/
+            /*width: 80px;*/
+        /*}*/
+        /*.wideField {*/
+            /*width: 200px;*/
+        /*}*/
+        /*#locationField {*/
+            /*height: 20px;*/
+            /*margin-bottom: 2px;*/
+        /*}*/
     </style>
-<div id="locationField">
-    <input id="autocomplete" placeholder="Enter your address"
+    <input required id="autocomplete" placeholder="Enter your address"
            onFocus="geolocate()" type="text"></input>
-</div>
 
 <script>
     var placeSearch, autocomplete;
@@ -67,12 +65,10 @@
         autocomplete.addListener('place_changed', function () {
             var place = autocomplete.getPlace();
             var address = (place['formatted_address']);
-            document.getElementsByClassName(address_input).value = address;
+            document.getElementById("form_place").value = address;
         });
     }
 
-    // Bias the autocomplete object to the user's geographical location,
-    // as supplied by the browser's 'navigator.geolocation' object.
     function geolocate() {
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(function(position) {
