--- a/PinBoard/templates/index.html.twig
+++ b/PinBoard/templates/index.html.twig
@@ -9,7 +9,7 @@
                 <div class="welcome">
                     <div id="#typed-welcome">I'am looking for</div>
                 </div>
-                <div class="form">
+                <div class="index-form">
                     <div class="name">
                     {{ form_widget(form.name) }}
                     </div>
@@ -23,8 +23,9 @@
                     {{ form_widget(form.submit)}}
                 </div>
             </div>
+            {{ form_end(form) }}
         </div>
-    {% endblock %}
+    {% endblock content%}
     {% block javascripts %}
     <script>
         document.getElementById("form_place").value = '';
