--- a/PinBoard/templates/base.html.twig
+++ b/PinBoard/templates/base.html.twig
@@ -5,8 +5,8 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('build/app.css') }}">
-            <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-            <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+            {#<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">#}
+            {#<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">#}
         {% endblock %}
     </head>
 
